// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<StyledLink
  priority="warning"
  size="normal"
  to="/settings/accounts/notifications"
>
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <IconChevron
    direction="right"
  />
</StyledLink>
`;

exports[`AlertLink renders with icon 1`] = `
<StyledLink
  priority="warning"
  size="normal"
  to="/settings/accounts/notifications"
>
  <IconWrapper>
    <IconMail />
  </IconWrapper>
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <IconChevron
    direction="right"
  />
</StyledLink>
`;
